# edgehog-device-runtime-proto

./: .cliffignore  .gitignore  CHANGELOG.md  Makefile  README.md  REUSE.toml  buf.yaml  cliff.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/actions/install-deps/: action.yaml
.github/workflows/: changelog.yaml  ci.yaml  codegen.yaml  dco.yaml  protobuf.yaml  publish.yaml  reuse-lint.yaml  rust-check.yaml  rust-test.yaml  warmup-caches.yaml
cpp/: CMakeLists.txt
proto/edgehog/deviceruntime/containers/v1/: v1.proto
rust/: .gitignore  Cargo.toml
rust/codegen/: Cargo.toml
rust/codegen/src/: main.rs
rust/edgehog-device-runtime-proto/: Cargo.toml  README.md
rust/edgehog-device-runtime-proto/src/: lib.rs
rust/edgehog-device-runtime-proto/src/containers/: mod.rs  v1.rs  v1.rs.license
scripts/: changelog-comment.sh  changelog-update.sh  check-for-publish.sh  copyright.sh  coverage.sh  generate-and-check.sh  github-release.sh  proto-check-breaking-changes.sh
