# Copyright 2025 SECO Mind Srl
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegen"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
eyre.workspace = true
tonic-prost-build.workspace = true
tonic-build.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir = { workspace = true }
