# Copyright 2025 SECO Mind Srl
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-proto"
version.workspace = true
categories = ["api-bindings"]
edition.workspace = true
homepage.workspace = true
keywords = ["astarte", "protobuf", "iot"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Astarte message hub protocol buffers for Rust"

[dependencies]
chrono.workspace = true
prost.workspace = true
prost-types = { workspace = true, features = ["chrono"] }
tonic.workspace = true
tonic-prost.workspace = true
